# sf-mcp

./: .env.example  .gitignore  .mcp.json  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml  requirements.txt  server.json  smithery.yaml
src/sf_mcp/: api_client.py  config.py  server.py
